# galaxsee-hpc

./: README.md
galaxsee-hpc-1.1/: CMakeLists.txt  galaxsee.qsub
galaxsee-hpc-1.1/OLD_UTILS/: Makefile
galaxsee-hpc-1.1/OLD_VERSIONS/GalaxSee/: .#nbody.1.2  Makefile  analyze.perl  galaxsee.c  galaxsee.qsub  galaxsee_bak.c  localmachines  machines  nbody.c  nbody.h  nbody_bak.c  output
galaxsee-hpc-1.1/SAMPLE_INPUTS/: logo.gal  n1000.gal  n2000.gal  n500.gal  n5000.gal  netcdf.gal  pppm.gal  simple.gal  spiral.gal  test.gal  tree.gal
galaxsee-hpc-1.1/SAMPLE_INPUTS/Gadget2/: Gadget2
galaxsee-hpc-1.1/src/: CMakeLists.txt  galaxsee.c  junk  nbody.c  nbody.h  nbody_config.h.in  octtree.c  rand_tools.c  timer.c  timer.h
galaxsee-hpc-1.1/utils/: I_qsort.c  I_qsort.h  galgen.c
